--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -44,3 +44,10 @@
     color: #282828;
     cursor: pointer;
 }
+.sidebar .recent-entry:hover{
+    background-color: #e2e6eb;    
+}
+.sidebar .bottom{
+    display: flex;
+    flex-direction: column;
+}
