--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -4,3 +4,11 @@
     padding-bottom: 15vh;
     position: relative;
 }
+.main .nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 22px;
+    padding: 20px;
+    color: #585858;
+}
