--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -16,3 +16,14 @@
     width: 40px;
     border-radius: 50%;
 }
+.main-container{
+    max-width: 900px;
+    margin: auto;
+}
+.main .greet{
+    margin: 50px;
+    font-size: 56px;
+    color: #c4c7c5;
+    font-weight: 500;
+    padding: 20px;
+}
