--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -27,3 +27,8 @@
     font-weight: 500;
     padding: 20px;
 }
+.main .greet span{
+    background: -webkit-linear-gradient(16deg, #4b90ff, #ff5546);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
