--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -38,3 +38,11 @@
     gap: 15px;
     padding: 20px;
 }
+.main .card{
+    height: 200px;
+    padding: 15px;
+    background-color: #f0f4f9;
+    border-radius: 10px;
+    position: relative;
+    cursor: pointer;
+}
