--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -46,3 +46,12 @@
     position: relative;
     cursor: pointer;
 }
+.main .card img{
+    width: 35px;
+    padding: 5px;
+    position: absolute;
+    background-color: white;
+    border-radius: 20px;
+    bottom: 10px;
+    right: 10px;
+}
