--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -102,3 +102,11 @@
     text-align: center;
     font-weight: 300;
 }
+.result{
+    padding: 0px 5%;
+    max-height: 70vh;
+    overflow-y: scroll;
+}
+.result::-webkit-scrollbar{
+    display: none;
+}
