--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -110,3 +110,9 @@
 .result::-webkit-scrollbar{
     display: none;
 }
+.result-title{
+    margin: 40px 0px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
