--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -116,3 +116,12 @@
     align-items: center;
     gap: 20px;
 }
+.result img{
+    width: 40px;
+    border-radius: 50%;
+}
+.result-data{
+    display: flex;
+    align-items: start;
+    gap: 20px;
+}
