--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -136,4 +136,6 @@
     border: none;
     background-color: #f6f7f8;
     background: linear-gradient(to right, #9ed7ff, #ffffff, #9ed7ff);
+    background-size: 800px 50px;
+    height: 20px;
 }
