--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -56,3 +56,9 @@
     padding-right: 10px;
     cursor: pointer;
 }
+
+@media (max-width:600px) {
+    .sidebar{
+        display: none;
+    }        
+}
