--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -1,22 +1,22 @@
-.sidebar{
+.sidebar {
     min-height: 100vh;
-    display: inline-flex;
+    display: flex;
     flex-direction: column;
     justify-content: space-between;
     background-color: #f0f4f9;
     padding: 25px 15px;
 }
-.sidebar img{
+.sidebar img {
     width: 20px;
 }
-.sidebar .menu{
+.sidebar .menu {
     display: block;
     margin-left: 10px;
     cursor: pointer;
 }
-.sidebar .new-chat{
+.sidebar .new-chat {
     margin-top: 50px;
-    display: inline-flex;
+    display: flex;
     align-items: center;
     gap: 10px;
     padding: 10px 15px;
@@ -26,16 +26,16 @@
     color: grey;
     cursor: pointer;
 }
-.sidebar .recent{
+.sidebar .recent {
     display: flex;
     flex-direction: column;
     animation: fadeIn 1.5s;
 }
-.sidebar .recent-title{
+.sidebar .recent-title {
     margin-top: 30px;
     margin-bottom: 20px;
 }
-.sidebar .recent-entry{
+.sidebar .recent-entry {
     display: flex;
     align-items: start;
     gap: 10px;
@@ -45,20 +45,20 @@
     color: #282828;
     cursor: pointer;
 }
-.sidebar .recent-entry:hover{
+.sidebar .recent-entry:hover {
     background-color: #e2e6eb;    
 }
-.sidebar .bottom{
+.sidebar .bottom {
     display: flex;
     flex-direction: column;
 }
-.sidebar .bottom-item{
+.sidebar .bottom-item {
     padding-right: 10px;
     cursor: pointer;
 }
 
 @media (max-width:600px) {
-    .sidebar{
+    .sidebar {
         display: none;
     }        
 }
